--- a/style.css
+++ b/style.css
@@ -6,14 +6,11 @@ body {
 h1,
 h2 {
   text-align: center;
-  font-family: "Satisfy", cursive;
+  font-family: "Montserrat Subrayada", sans-serif;
 }
-h2,
 p {
   text-align: center;
-  font-family: "Noto Serif Sinhala", serif;
-}
-p {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   margin-top: 20px;
 }
 img {
@@ -82,7 +79,7 @@ footer {
 }
 .dark {
   background-image: url("https://s3.amazonaws.com/shecodesio-production/uploads/files/000/053/433/original/chicago_night.jpg?1668362571");
-  color: aliceblue;
+  color: rgb(171, 197, 219);
 }
 .dark .container {
   background: rgba(47, 62, 105, 0.7);
